--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -4,11 +4,11 @@
 
 # General dependencies
 # -----------------------------------------------------------
-[[override]]
+[[constraint]]
   name = "github.com/stretchr/testify"
   version = "~1.2.2"
 
-[[override]]
+[[constraint]]
   name = "github.com/mitchellh/go-homedir"
   version = "~1.0.0"
 
