--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -9,6 +9,10 @@
   version = "~1.2.2"
 
 [[constraint]]
+  name = "github.com/bouk/monkey"
+  revision = "5df1f207ff77e025801505ae4d903133a0b4353f"
+
+[[constraint]]
   name = "github.com/mitchellh/go-homedir"
   version = "~1.0.0"
 
