--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -2,7 +2,7 @@
 # https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md
 # https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md#version-rules
 
-# General dependencies
+# Test dependencies
 # -----------------------------------------------------------
 [[constraint]]
   name = "github.com/stretchr/testify"
@@ -12,6 +12,8 @@
   name = "github.com/bouk/monkey"
   revision = "5df1f207ff77e025801505ae4d903133a0b4353f"
 
+# General dependencies
+# -----------------------------------------------------------
 [[constraint]]
   name = "github.com/mitchellh/go-homedir"
   version = "~1.0.0"
@@ -20,10 +22,13 @@
   name = "github.com/ghodss/yaml"
   version = "v1.0.0"
 
+[[constraint]]
+  name = "github.com/valyala/bytebufferpool"
+  version = "v1.0.0"
 
 # General directives
 # -----------------------------------------------------------
 [prune]
   non-go = true
   go-tests = true
-  #unused-packages = true
+  unused-packages = true
