--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -15,6 +15,10 @@
 # General dependencies
 # -----------------------------------------------------------
 [[constraint]]
+  name = "github.com/phR0ze/cast"
+  version = "~1.3.0"
+
+[[constraint]]
   name = "github.com/phR0ze/go-errors"
   version = "~0.8.2"
 
