--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -19,8 +19,8 @@
   version = "~1.3.0"
 
 [[constraint]]
-  name = "github.com/phR0ze/go-errors"
-  version = "~0.8.2"
+  name = "github.com/pkg/errors"
+  version = "~0.8.1"
 
 [[constraint]]
   name = "github.com/mitchellh/go-homedir"
