--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+bin/mech
 bin/n
 vendor
 .vendor-new
@@ -5,16 +6,3 @@ test/temp/*
 test/perf/numerable/numerable
 test/perf/standard/standard
 pkg/term/test/test
-
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-
-# Test binary, build with `go test -c`
-*.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
